# AnalogChess

./: LICENSE  README.md  analogchessV1.py  analogchessV2.py  analogchessV3.py  analogchessV4.py  pyproject.toml
analog-chess-backend/: README.md  pyproject.toml  server.py
analog-chess-frontend/: package.json  pnpm-lock.yaml
analog-chess-frontend/src/: App.tsx  index.css  networking.ts  types.ts  utils.ts
analog-chess-frontend/src/components/: Board.tsx  DirectionOverlay.tsx  Overlay.tsx  Piece.tsx
analog-chess-frontend/src/data/: consts.ts  initialState.ts  moves.ts  pieceSymbols.ts
differentfiles/: colors.py  drawing.py  utils.py
differentfiles/pieces/: __init__.py  bishop.py  king.py  knight.py  pawn.py  piece.py  queen.py  rook.py
